--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,9 @@ footer {
 #bag-icon-container {
 	position: relative;
 }
+#bag-icon-container:hover {
+	cursor: pointer;
+}
 #circle-counter {
 	position: absolute;
 	top: 10%;
@@ -281,4 +284,38 @@ footer {
     outline: none;
     cursor: pointer;
     margin-bottom: 20px;
+}
+#bag-popup {
+	border-radius: 8%;
+	position: absolute;
+	right: -25px;
+	background-color: #fff;
+	height: 70px;
+	width: 150px;
+}
+#bag-total-text,
+#total-price {
+	display: inline-block;
+	padding-bottom: 20px;
+	padding-top: 20px;
+	font-weight: 700;
+}
+#bag-total-text {
+	margin-left: 20px;
+}
+#total-price {
+	float: right;
+	margin-right: 20px;
+}
+.top-arrow {
+	display: block;  
+	position: absolute;
+	left: 120px;
+	bottom: 70px;
+	width: 0;
+	height: 0;
+	border-bottom: 10px solid #fff;
+	border-top: 10px solid transparent;
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
 }
